--- a/himalaya-project/src/components/styles/home.css
+++ b/himalaya-project/src/components/styles/home.css
@@ -136,3 +136,56 @@
 #text-div-main{
     margin-left: 30px;
 }
+#card-1{
+    border: 1px solid grey;
+    width: 300px;
+        height: 200px;
+        margin-left: 20px;
+        text-align: left;
+        /* padding-left: 30px; */
+     
+
+}
+#comment{
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #333333;
+}
+#author{
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 19px;
+    color: #ababab;
+}
+#social-media :hover{
+    cursor: pointer;
+    background-image: url('https://cdn.shopify.com/s/files/1/0399/1728/9633/products/Whitening-Mint---Box-Tube_800x.png?v=1597743896');
+  
+}
+#social-text{
+    text-align: left;
+    display: flex;
+    align-items: right;
+    margin-left: 30px;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 40px;
+    color: #333333;
+    margin-bottom: 50px;
+}
+
+#logo-insta{
+margin-left: 800px;
+
+}
+#icon-fb{
+    margin-left: 20px;
+    
+}
