--- a/himalaya-project/src/components/styles/home.css
+++ b/himalaya-project/src/components/styles/home.css
@@ -83,16 +83,16 @@
 #box-outer{
     border: 1px solid blue;
     height: 440px;
-    display: flex;
+    /* display: flex; */
     width: 90%;
     margin: auto;
     margin-top: 30px;
 }
-#box-outer>div{
+/* #box-outer>div{
     width: 33%;
     border: 1px solid blue;
     height: 100%;
-}
+} */
 #box-outer>div>img{
     height: 370px;
     width: 100%;
