--- a/himalaya-project/src/components/styles/nav.css
+++ b/himalaya-project/src/components/styles/nav.css
@@ -64,4 +64,19 @@
   }
 
 
-
+  #shop-nav-2{
+    text-align: center;
+    margin-top: 24px;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    color: #333333;
+    margin-left: 40px;
+ 
+   
+}
+#shop-nav-2:hover{
+    color: #a3b49b;
+}
