--- a/himalaya-project/src/components/styles/products.css
+++ b/himalaya-project/src/components/styles/products.css
@@ -54,6 +54,12 @@
     width: 40%;
  
     margin: auto;
+
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-bottom: 20px;
 }
 #btn-1-min{
     text-align: center;
@@ -83,4 +89,43 @@
 }
 #btn-1-plus:hover{
     cursor: pointer;
+}
+#addtocart{
+    margin-left: 15px;
+    width: 500px;
+    height: 50px;
+    border-radius: 20px;
+    background: #1a4448;
+    color: white;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 33px;
+  
+   
+}
+#buy-it{
+    width: 550px;
+    height: 50px;
+    border-radius: 20px;
+    background: #ff7451;
+    color: white;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 33px;
+    margin-top: 20px;
+}
+#des-pro{
+    text-align: left;
+    margin-top: 50px;
+
+    color: #333333;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
 }
