--- a/himalaya-project/src/components/styles/oral.css
+++ b/himalaya-project/src/components/styles/oral.css
@@ -25,3 +25,37 @@
     flex-wrap: wrap;
     flex-direction: row;
 }
+#bag-btn-3:hover{
+    z-index: 1;
+   width: 100px;
+}
+#hover-cart{
+    display: none;
+    z-index: 1;
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 28px;
+    color: #ffff;
+    text-align: center;
+    padding-top: 5px;
+}
+#bag-btn-3:hover+#hover-cart{
+    display: flex;
+    z-index: 2;
+    transition: 1s;
+}
+
+#price-3{
+    font-family: Poppins,sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 34px;
+    color: #a3a3a3;
+    text-align: center;
+    padding-top: 5px;
+    margin-left: 15px;
+    position: relative;
+}
