--- a/himalaya-project/src/components/styles/oral.css
+++ b/himalaya-project/src/components/styles/oral.css
@@ -1,26 +1,28 @@
 #side-1{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 1000px;
     width: 23%;
 }
 #contend{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 100%;
     width: 77%;
 }
 #sort{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 35px;
     width: 100%;
+    text-align: left;
     font-family: Poppins,sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 36px;
     line-height: 43px;
     margin-top: 30px;
+    margin-left: 200px;
 }
 #sort-2{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 35px;
     width: 100%;
     margin-top: 40px;
@@ -31,7 +33,7 @@
     line-height: 43px; */
 }
 #single-data{
-    border: 1px solid black;
+    border: 1px solid white;
     height: 340px;
     width: 220px;
     margin-right: 20px;
