--- a/himalaya-project/src/components/styles/products.css
+++ b/himalaya-project/src/components/styles/products.css
@@ -2,24 +2,24 @@
     display: flex;
 }
 #left-pro{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 900px;
     width: 50%;
 }
 #right-pro{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 900px;
     width: 50%;
 }
 #img-pro{
-    border: 1px solid greenyellow;
+    /* border: 1px solid greenyellow; */
     width: 90%;
     height: 500px;
     margin: auto;
     margin-top: 70px;
 }
 #data-pro{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 700px;
     width: 90%;
     margin: auto;
@@ -72,7 +72,7 @@
 #plus-btns{
     width: 110px;
     height: 45px;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     border-radius: 20px;
     display: flex;
     background-color: #f8f8f8;
